[gd_scene load_steps=23 format=2]

[ext_resource path="res://Assets/Interface/Menus/png/main_menu_sheet.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Interface/interface.gd" type="Script" id=2]
[ext_resource path="res://Assets/Interface/Buttons/png/icon_button.png" type="Texture" id=3]
[ext_resource path="res://Assets/Interface/Icons/png/hammer_icon.png" type="Texture" id=4]
[ext_resource path="res://Assets/Interface/Icons/png/shovel_icon.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Interface/Build/BuildInterface.tscn" type="PackedScene" id=8]

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 288, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 480, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 576, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 672, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 768, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 864, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 960, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 1056, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 1152, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 1248, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 1344, 0, 96, 96 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ) ],
"loop": false,
"name": "default",
"speed": 24.0
} ]

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="TextureButton" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -48.0
margin_right = 48.0
rect_min_size = Vector2( 48, 48 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="AnimatedSprite" parent="MainMenu"]
frames = SubResource( 12 )
frame = 14
offset = Vector2( 48, 0 )

[node name="Buttons" type="MarginContainer" parent="MainMenu"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -114.0
margin_right = 114.0
rect_min_size = Vector2( 114, 114 )
mouse_filter = 2
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="MainMenu/Buttons"]
margin_left = 10.0
margin_right = 114.0
margin_bottom = 112.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = -20

[node name="BuildMargin" type="MarginContainer" parent="MainMenu/Buttons/VBox"]
margin_right = 104.0
margin_bottom = 36.0
mouse_filter = 2
custom_constants/margin_left = 0

[node name="Build" type="TextureButton" parent="MainMenu/Buttons/VBox/BuildMargin"]
margin_right = 36.0
margin_bottom = 36.0
rect_min_size = Vector2( 36, 36 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 3

[node name="Icon" type="Sprite" parent="MainMenu/Buttons/VBox/BuildMargin/Build"]
self_modulate = Color( 1, 1, 1, 0.686275 )
texture = ExtResource( 4 )
centered = false
offset = Vector2( 6, 5 )

[node name="Button2Margin" type="MarginContainer" parent="MainMenu/Buttons/VBox"]
margin_top = 16.0
margin_right = 104.0
margin_bottom = 48.0
mouse_filter = 2
custom_constants/margin_top = -4
custom_constants/margin_left = 40

[node name="Terrain" type="TextureButton" parent="MainMenu/Buttons/VBox/Button2Margin"]
margin_left = 40.0
margin_top = -4.0
margin_right = 76.0
margin_bottom = 32.0
rect_min_size = Vector2( 36, 36 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 3

[node name="Icon2" type="Sprite" parent="MainMenu/Buttons/VBox/Button2Margin/Terrain"]
self_modulate = Color( 1, 1, 1, 0.686275 )
texture = ExtResource( 6 )
centered = false
offset = Vector2( 6, 5 )

[node name="Button3Margin" type="MarginContainer" parent="MainMenu/Buttons/VBox"]
margin_top = 28.0
margin_right = 104.0
margin_bottom = 76.0
mouse_filter = 2
custom_constants/margin_top = 12
custom_constants/margin_left = 65

[node name="Button3" type="TextureButton" parent="MainMenu/Buttons/VBox/Button3Margin"]
margin_left = 65.0
margin_top = 12.0
margin_right = 101.0
margin_bottom = 48.0
rect_min_size = Vector2( 36, 36 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 3

[node name="Button4Margin" type="MarginContainer" parent="MainMenu/Buttons/VBox"]
margin_top = 56.0
margin_right = 104.0
margin_bottom = 112.0
mouse_filter = 2
custom_constants/margin_right = 1
custom_constants/margin_top = 20

[node name="Button4" type="TextureButton" parent="MainMenu/Buttons/VBox/Button4Margin"]
margin_left = 67.0
margin_top = 20.0
margin_right = 103.0
margin_bottom = 56.0
rect_min_size = Vector2( 36, 36 )
size_flags_horizontal = 8
size_flags_vertical = 0
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 3

[node name="BuildInterface" parent="." instance=ExtResource( 8 )]

[connection signal="pressed" from="MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="MainMenu/Buttons/VBox/BuildMargin/Build" to="." method="_on_Build_pressed"]
[connection signal="pressed" from="MainMenu/Buttons/VBox/Button2Margin/Terrain" to="." method="_on_Terrain_pressed"]
